--- a/skins/css/CCCstyle.css
+++ b/skins/css/CCCstyle.css
@@ -5599,6 +5599,7 @@ div.CCC-Playlist-BlockMode{
 
 #CCC-groupN-AT{
     margin-left:-145px;
+    margin-right:145px;
 }
 
 .CCC-group-text{
@@ -5612,4 +5613,19 @@ div.CCC-Playlist-BlockMode{
     border: 1px dashed #ccc;
     background-color: #fff;
     color:#cccccc
+}
+
+.CCC-groupDEL-btn{
+    float: left;
+    display:block;
+    height:20px;
+    width:20px;
+    margin-left: -5px;
+    margin-top: 8px;
+    border: 0;
+    border-radius: 9px;
+    background-color: #cccccc;
+    color: white;
+    line-height: 18px;
+    text-align:center;
 }
